helm/apps/synology/nas-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: nas-external
  namespace: default
spec:
  ports:
    - port: 5001
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nas-external
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.0.201
    ports:
      - port: 5001
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-drive
  namespace: default
spec:
  redirectRegex:
    regex: ".*"
    replacement: "https://nas.kds-dev.com/?launchApp=SYNO.SDS.Drive.Application"
    permanent: false
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nas-dsm
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nas.kds-dev.com`)
      kind: Rule
      services:
        - name: nas-external
          port: 5001
          scheme: https
          serversTransport: insecure-nas
    - match: Host(`share.kds-dev.com`)
      kind: Rule
      middlewares:
        - name: redirect-to-drive
      services:
        - name: nas-external
          port: 5001
          scheme: https
          serversTransport: insecure-nas
  tls: {}
